# webkit-android-libraries

./: .gitignore  CMakeLists.txt  NOTICE  README.md  SoftLinking.h  VERSIONS
android/prebuilts/ndk/: CMakeLists.txt  ndk.def
android/system/core/libcutils/: CMakeLists.txt  ashmem-dev.c  ashmem-host.c  atomic-android-sh.c  atomic.c  hashmap.c  log.c  qtaguid.c  uio.c
android/system/core/liblog/: CMakeLists.txt  liblog.def  logd_write_win32.cpp
cairo/: CMakeLists.txt  cairo-uninstalled.pc  cairo-win32-font-uninstalled.pc  cairo-win32-uninstalled.pc  config.h  config.status  libtool
cairo/boilerplate/: cairo-boilerplate-constructors.c  cairo-boilerplate-egl.c
cairo/src/: cairo-compiler-private.h  cairo-egl-context.c  cairo-features.h  cairo-ft-font.c  cairo-gl-operand.c  cairo-gl-private.h  cairo-gl-surface.c  cairo-image-source.c  cairo-mutex-list-private.h  cairo-scaled-font.c  cairo-version.h  cairo-win32-font.pc  cairo-win32.h  cairo-win32.pc  cairo.h  cairo.pc
cairo/src/win32/: cairo-dwrite-font.cpp  cairo-dwrite-private.h  cairo-win32-font.c  cairo-win32-refptr.h
curl/: CMakeLists.txt
curl/include/curl/: curl.h
curl/lib/: CMakeLists.txt  curl_memory.h  easy.c
fontconfig/: CMakeLists.txt  config.h  config.status  fontconfig-zip  fontconfig.pc  libtool
fontconfig/doc/: version.sgml
fontconfig/fontconfig/: fontconfig.h
fontconfig/src/: fcatomic.h  fccfg.c  fcinit-android.c  fcinit.c  fcint.h  fcmutex.h  fcstdint.h  fcwindows.h
freetype/: CMakeLists.txt
giflib/: CMakeLists.txt  config.h
harfbuzz/: CMakeLists.txt  Makefile.in  aclocal.m4  config.h  configure
harfbuzz/PaxHeaders.32377/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  ar-lib  autogen.sh  compile  config.guess  config.h.in  config.sub  configure  configure.ac  depcomp  docs  gtk-doc.make  harfbuzz.doap  install-sh  ltmain.sh  m4  missing  src  test  util
harfbuzz/docs/: Makefile.in
harfbuzz/docs/PaxHeaders.32377/: Makefile.am  Makefile.in  reference
harfbuzz/docs/reference/: Makefile.in  harfbuzz.types
harfbuzz/docs/reference/PaxHeaders.32377/: Makefile.am  Makefile.in  harfbuzz-docs.xml  harfbuzz-overrides.txt  harfbuzz-sections.txt  harfbuzz.types  html  version.xml  version.xml.in
harfbuzz/docs/reference/html/: annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  harfbuzz-hb-blob.html  harfbuzz-hb-buffer.html  harfbuzz-hb-common.html  harfbuzz-hb-coretext.html  harfbuzz-hb-deprecated.html  harfbuzz-hb-face.html  harfbuzz-hb-font.html  harfbuzz-hb-ft.html  harfbuzz-hb-glib.html  harfbuzz-hb-gobject.html  harfbuzz-hb-graphite2.html  harfbuzz-hb-icu.html  harfbuzz-hb-ot-layout.html  harfbuzz-hb-ot-tag.html  harfbuzz-hb-ot.html  harfbuzz-hb-set.html  harfbuzz-hb-shape-plan.html  harfbuzz-hb-shape.html  harfbuzz-hb-unicode.html  harfbuzz-hb-uniscribe.html  harfbuzz-hb-version.html  harfbuzz-hb.html  harfbuzz.devhelp2  index.html  index.sgml  object-tree.html
harfbuzz/m4/PaxHeaders.32377/: ax_pthread.m4  gtk-doc.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  pkg.m4
harfbuzz/src/: Makefile.in
harfbuzz/src/PaxHeaders.32377/: Makefile.in  check-libstdc++.sh  check-static-inits.sh  check-symbols.sh  gen-arabic-table.py  gen-indic-table.py  harfbuzz.pc.in  hb-atomic-private.hh  hb-blob.cc  hb-blob.h  hb-buffer-deserialize-json.hh  hb-buffer-deserialize-json.rl  hb-buffer-deserialize-text.hh  hb-buffer-deserialize-text.rl  hb-buffer-private.hh  hb-buffer-serialize.cc  hb-buffer.cc  hb-buffer.h  hb-cache-private.hh  hb-common.cc  hb-common.h  hb-coretext.cc  hb-coretext.h  hb-deprecated.h  hb-face-private.hh  hb-face.cc  hb-face.h  hb-fallback-shape.cc  hb-font-private.hh  hb-font.cc  hb-font.h  hb-ft.cc  hb-ft.h  hb-glib.cc  hb-glib.h  hb-gobject-structs.cc  hb-gobject-structs.h  hb-graphite2.cc  hb-graphite2.h  hb-icu.cc  (+68 more)
harfbuzz/src/hb-ucdn/: Makefile.in
harfbuzz/src/hb-ucdn/PaxHeaders.32377/: COPYING  Makefile.am  Makefile.in  README  ucdn.c  ucdn.h  unicodedata_db.h
harfbuzz/test/: Makefile.in
harfbuzz/test/PaxHeaders.32377/: Makefile.am  Makefile.in  api  shaping
harfbuzz/test/api/: Makefile.in
harfbuzz/test/api/PaxHeaders.32377/: Makefile.am  Makefile.in  hb-test.h  test-blob.c  test-buffer.c  test-c.c  test-common.c  test-cplusplus.cc  test-font.c  test-object.c  test-ot-tag.c  test-set.c  test-shape.c  test-unicode.c  test-version.c
harfbuzz/test/shaping/: Makefile.in
harfbuzz/test/shaping/PaxHeaders.32377/: Makefile.am  Makefile.in  fonts  hb-diff  hb-diff-colorize  (+11 more)
harfbuzz/util/: Makefile.in
harfbuzz/util/PaxHeaders.32377/: Makefile.am  Makefile.in  ansi-print.cc  ansi-print.hh  hb-ot-shape-closure.cc  hb-shape.cc  hb-view.cc  helper-cairo-ansi.cc  helper-cairo-ansi.hh  helper-cairo.cc  helper-cairo.hh  main-font-text.hh  options.cc  options.hh  view-cairo.cc  view-cairo.hh
hyphenation/: CMakeLists.txt  hyphen.c  substrings.c
icu/source/common/: CMakeLists.txt
icu/source/i18n/: CMakeLists.txt
icu/source/stubdata/: CMakeLists.txt
jpeg/: CMakeLists.txt  jdphuff.c  jmorecfg.h
jpeg-turbo/: CMakeLists.txt
libpng/: CMakeLists.txt  config.h  config.status  libpng-config  libpng.pc  libtool  pnglibconf.dfn  pnglibconf.h  pngpriv.h  pngrutil.c
libxml2/: CMakeLists.txt  xmlreader.c  xmlwriter.c
libxslt/: CMakeLists.txt
libxslt/libxslt/: win32config.h  xsltutils.c
pixman/: CMakeLists.txt  config.status  configure  libtool  pixman-1-uninstalled.pc  pixman-1.pc
pixman/pixman/: pixman.c
pthreadnp/: CMakeLists.txt  pthread.cpp  pthread.h  sched.h
pthreadnp/pthreads-win32/lib32/: pthreadVC2.lib
safeint/: CMakeLists.txt
safeint/safeint/: SafeInt3.hpp  safeint.cpp  safeint.h
sqlite/: CMakeLists.txt  sqlite.sln  sqlite3.h
sqlite/android/: CMakeLists.txt  PhoneticStringUtils.cpp  PhoneticStringUtils.h  Unicode.h  sqlite3_android.cpp
webp/: CMakeLists.txt
winsock2/: CMakeLists.txt  winsock2.h
winsock2/winsock2/: Ws2_32.cpp  Ws2_32.h
zlib/: CMakeLists.txt  zlib.sln
zlib/contrib/minizip/: unzip.c
zlib/google/: zip.sln
(+211 files in other folders)
